// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> rendering should render nothing on incorrect param name 1`] = `
<React.Fragment>
  <div
    className="owisp-modal-container"
  >
    <div
      className="owisp-modal-row-close"
    >
      <Link
        className="owisp-modal-close-btn"
        to="/default/login"
      >
        X
      </Link>
    </div>
    <div
      className="owisp-modal-content"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
    />
  </div>
</React.Fragment>
`;

exports[`<Modal /> rendering should render privacy-policy correctly 1`] = `
<React.Fragment>
  <div
    className="owisp-modal-container"
  >
    <div
      className="owisp-modal-row-close"
    >
      <Link
        className="owisp-modal-close-btn"
        to="/default/login"
      >
        X
      </Link>
    </div>
    <div
      className="owisp-modal-content"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<h1 id=\\"openwisp-wifi-login-pages-privacy-policy\\">openwisp-wifi-login-pages Privacy Policy</h1>
<ul>
<li><p>Your privacy is important to us. It is Openwisp's policy to respect your privacy regarding any information we may collect from you across openwisp-wifi-login-pages.</p>
</li>
<li><p>We only ask for personal information when we truly need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used.</p>
</li>
<li><p>We only retain collected information for as long as necessary to provide you with your requested service. What data we store, we’ll protect within commercially acceptable means to prevent loss and theft, as well as unauthorised access, disclosure, copying, use or modification.</p>
</li>
<li><p>We don’t share any personally identifying information publicly or with third-parties, except when required to by law.</p>
</li>
<li><p>Our website may link to external sites that are not operated by us. Please be aware that we have no control over the content and practices of these sites, and cannot accept responsibility or liability for their respective privacy policies.</p>
</li>
<li><p>You are free to refuse our request for your personal information, with the understanding that we may be unable to provide you with some of your desired services.</p>
</li>
<li><p>Your continued use of our website will be regarded as acceptance of our practices around privacy and personal information. If you have any questions about how we handle user data and personal information, feel free to contact us.</p>
</li>
</ul>
",
        }
      }
    />
  </div>
</React.Fragment>
`;

exports[`<Modal /> rendering should render terms-and-conditions correctly 1`] = `
<React.Fragment>
  <div
    className="owisp-modal-container"
  >
    <div
      className="owisp-modal-row-close"
    >
      <Link
        className="owisp-modal-close-btn"
        to="/default/login"
      >
        X
      </Link>
    </div>
    <div
      className="owisp-modal-content"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<h1 id=\\"openwisp-wifi-login-pages-terms-and-conditions\\">Openwisp-wifi-login-pages Terms and Conditions</h1>
<ul>
<li><p>By using or visiting the Openwisp-wifi-login-pages, you signify your agreement
to these terms and conditions (the \\"Terms of Service\\") and the Privacy policy.</p>
</li>
<li><p>In order to access the wifi service, you need to be a registered user of the
default organization.</p>
</li>
<li><p>Openwisp-wifi-login-pages is not liable for any unauthorized use of your account,
you may be liable for the losses of the services or others due to such unauthorized use.</p>
</li>
<li><p>Openwisp reserves the right to discontinue or disallow any user, group or any
specific IP (internal or external) from using its services without any prior notice.</p>
</li>
<li><p>Violating the above mentioned Terms and Conditions may result in the termination
of the particular user account or the particular IP address from accessing
Openwisp-wifi-login-pages and using its services in the future.</p>
</li>
</ul>
",
        }
      }
    />
  </div>
</React.Fragment>
`;
